[XForms] NPOTDB insert cant handle empty target nodeset. Bug 389016, r=olli+aaronr